--- a/WPF-MVVM-CV19/WPF-MVVM-CV19.csproj
+++ b/WPF-MVVM-CV19/WPF-MVVM-CV19.csproj
@@ -9,12 +9,12 @@
 
   <ItemGroup>
     <Folder Include="Data\" />
-    <Folder Include="Models\" />
     <Folder Include="Services\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="FontAwesome5" Version="2.1.0" />
+    <PackageReference Include="OxyPlot.Wpf" Version="2.0.0" />
   </ItemGroup>
 
 </Project>
