--- a/WPF-MVVM-CV19/WPF-MVVM-CV19.csproj
+++ b/WPF-MVVM-CV19/WPF-MVVM-CV19.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="FontAwesome5" Version="2.1.0" />
+    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.31" />
     <PackageReference Include="OxyPlot.Wpf" Version="2.0.0" />
   </ItemGroup>
 
